...
    <string name="bgg_config_list_show_board_game_basic">Juegos Base</string>
    <string name="bgg_config_list_show_expansion">Expansiones</string>
    <string name="toolbar_title_fragment_list_things_all">Juegos y Expansiones</string>
    <string name="toolbar_title_fragment_list_things_boardgames">Juegos</string>
    <string name="toolbar_title_fragment_list_things_expansions">Expansiones</string>
    <string name="calculatorGoToDetail">Vista detalle</string>
    <string name="toast">Testeando un toast</string>
    <string name="languageDependence">Dependencia idioma: </string>
    <string name="launchIntent">Lanzar Intent</string>
</resources>
