<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cats.CatsActivity">

    <include
        android:id="@+id/clToolbar"
        layout="@layout/toolbar_screen" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListUsersBGG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item_list_user_bgg_recyclerview"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddUserBGG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_user"
        android:src="@drawable/ic_add_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>