<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mlListThings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/scene_bgg_list_things_config">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.045" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListThingsBGG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="2"
        tools:listitem="@layout/recyclerview_item_bgg_thing" />

    <include
        android:id="@+id/clConfigListThings"
        layout="@layout/include_bgg_config_list_things" />

    <Button
        android:id="@+id/btLaunchIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launchIntent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>